test/error/sema/primitive-params-cant-be-mutable.dsk
let f = (mut x: int) -> void
    return
end
